--- a/templates/catalogue/produits.html.twig
+++ b/templates/catalogue/produits.html.twig
@@ -6,35 +6,35 @@
 <div class="banner text-center">
 	{%include 'carousel.html.twig'%}
 </div>
-        <h6 style="background:#ff7629 " class="rounded border border-dark  p-2 m-2 text-center  text-white fs-4 m-5">
+<div id="article2"  class="col-12 text-center d-flex flex-column justify-content-arround align-items-center ">
+    <div class="col-sm-12 mx-auto ">
+        <h6 style="background:#ff7629 " class="EM6 rounded border border-dark  p-2 m-2 text-center  text-white fs-4 m-5">
             {% block subtitle %} Produits Images-Line{% endblock %}
         </h6>
-<div class="row text-center  ">
-    <div class="col-sm-12 mx-auto ">
-    <p class="">Trouvez l'edition et tous les plugging qui vous conviennent</p>
-    {# <p>Pourquoi FL-STUdio </p> #}
+            <p class="">Trouvez l'edition et tous les plugging qui vous conviennent</p>
+            {# <p>Pourquoi FL-STUdio </p> #}
     <span id="detail" class=" d-flex justify-content-center align-items-center ">
-    <p style="color: white;font-size:1.3em; margin-right:20px">
-    <svg  fill="#ff7629" xmlns="http://www.w3.org/2000/svg"   height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>L'achat comprend des mises à jour gratuites à vie
-    </p>
+            <p style="color: white;font-size:1.3em; margin-right:20px">
+            <svg  fill="#ff7629" xmlns="http://www.w3.org/2000/svg"   height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>L'achat comprend des mises à jour gratuites à vie
+            </p>
 
-    <p style="color:white;font-size:1.3em; margin-right:20px">
-    <svg fill="#ff7629" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>Prise en charge de macOS et Windows
-    </p>
+            <p style="color:white;font-size:1.3em; margin-right:20px">
+            <svg fill="#ff7629" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>Prise en charge de macOS et Windows
+            </p>
 
-    <p style="color:white;font-size:1.3em; margin-right:20px">
-    <svg fill="#ff7629" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>Version téléchargeable uniquement
-    </p>
+            <p style="color:white;font-size:1.3em; margin-right:20px">
+            <svg fill="#ff7629" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>Version téléchargeable uniquement
+            </p>
     
     </span>
-        <div class="row mt-5">
+        <div  class="row mt-5 d-flex justify-content-center align-items-center">
 
 
             {% for product in products %}
 
 
-                <div style='box-shadow:1px 1px 13px 0px #ff7629;height:354px ;width:268px; background:#ff7629;' class="card_catalogue col-md-4  m-4 mx-auto p-1 rounded">
-                        <div style='height:350px ;width:250px; ' class="card_catalogue col-md-4 bg-white m-4 mx-auto p-1 position-relative rounded-1">
+                <div class="card_catalogue col-md-4  m-4 mx-auto p-1 rounded">
+                        <div style='height:350px ;width:250px; ' class="col-md-4 bg-white m-4 mx-auto p-1 position-relative rounded-1">
                             <a href="{{ path('product', { 'id' : product.id }) }}">
                                 <img style="position: relative;top:-50px;left:-64.5px; "  class="img-fluid img-thumbnail border-0 h-50 w-50 " alt="oups" src="/images/products/{{ product.image }}">
                             </a>
@@ -52,5 +52,9 @@
             {% endfor %}
         </div>
     </div>
-</div>
+
+</div >
+    <article id="article2" class="col-12 d-flex justify-content-center align-items-center ">
+        <img class="w-75" src="images/products/MartinGarrix_Splash-1600x900.jpg" alt="">
+    </article>
 {% endblock %}
