--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -1,135 +1,256 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Accueil
+{% endblock %}
 
 {% block body %}
-    <article class="d-flex flex-column justify-content-center align-items-center">
-        <img src="images/products/FLStudio21.1.jpg" alt="">
-        <span class="mt-5 w-50">
-            <h5 style="color:#ff7629">FL STUDIO 21.1 |</h5>
-              Nous sommes ravis de la sortie de FL Studio 21.1. <br> Ajout
-             d’une édition de notes plus rapide et plus créative avec des outils de capture 
-             d’échelle et de note personnalisée dans le clavier. Formes d’onde colorées pour
-             une meilleure gestion des échantillons. Un plugin de chorus extrême, “Hyper Chorus”,
-             AI Declipper dans Edison et bien plus encore. Tout cela parce que nous vous aimons
-             Lifetime Free Updates!
-        </span>
 
 
-        <div  class="mt-5 w-75 d-flex   flex-wrap">
-
-            
-            
-            
-            <div  style="width:50%" class=" ">
-                <h5 style="color:#ff7629">FL Studio</h5>
-    
-                <div>
-    
-                    <h6>Formes d’onde colorées -</h6>
-                    <p>Option de paramètres généraux pour colorer le contenu de fréquence de code dans les formes d’onde audio. Cela s’applique au navigateur, à la liste de lecture, au canal de l’échantillonneur, etc.</p>
-                </div>
-    
-    
-                <div>
-                    <h6>Contrôle MIDI - </h6>
-                    <p>Nouveau mode de synchronisation externe et stabilité de l’horloge maître MIDI améliorée. Cela permet à FL Studio de 'asservir' une horloge MIDI externe afin qu’elle joue à temps sur une source d’horloge MIDI externe..</p>
-    
-                </div>
-    
-    
-                <div>
-                    <h6>Mises à jour automatisées -</h6>
-                    <p>Option pour télécharger automatiquement les mises à jour de FL Studio et les appliquer au prochain redémarrage.</p>
-    
-                </div>
-
-            </div>
-
-            <div  style="width:50%" class=" ">
-                <h5 style="color:#ff7629">Piano roll</h5>
-                <div>
-
-                    <h6>Aligner sur l’échelle -</h6>
-                    <p>Option de clavier pour aligner les notes sur l’échelle sélectionnée lors du placement ou du mouvement. Voir l’icône de note dans la barre d’outils.</p>
-        
-                </div>
-                <div>
-                    <h6>Menu > Outils > Script -</h6>
-                    <p> Les scripts sont basés sur Python qui permet une manipulation personnalisée des données du clavier. Il existe plusieurs scripts prédéfinis ou vous pouvez écrire les vôtres. Le script inclut également la création automatique d’interface utilisateur. Voir le forum de script de piano roll pour partager et discuter des scripts.</p>
-
-                </div>
-
-            </div>
-            <div class="">
-
-                <h5 style="color:#ff7629">Piano roll</h5>
-                <div>
-                    <p> Nouveaux Pluging et mis à jour</p>
-                    <h6>Hyper Chorus -</h6>
-                <p>Extreme chorus FX plugin, inclus avec Producer Edition et plus.</p>
-
-                </div>
-                <div>
-
-                    <h6>Edison Declipper -</h6>
-                    <p>Nouvel outil de décélération amélioré basé sur l’IA. Peut restaurer les enregistrements qui ont été coupés en raison de problèmes de niveau.</p>
-        
-                </div>
-                <div>
-
-                    <h6>SliceX -</h6>
-                    <p>Maintenant redimensionnable en faisant glisser le coin inférieur droit.</p>
-                </div>
-            </div>
-        </div>
-
-    </article>
-
-
-    
-    <article class="col-12  d-flex align-items-center m-5">
-        <img class="w-50" src="images/products/155226-large.jpg" alt="">
-        <p style="font-size:1.5em" class="col-4 text-start mx-auto ">
-            En tant que compositeur, ma tâche la plus difficile est de traduire les idées de ma tête dans un DAW.
-              Fruty-loops se sent comme une extension de mon cerveau et me permet de créer facilement la musique de mon imagination.
-        </p>
-    </article>
-    <article class="d-flex flex-column justify-content-center align-items-center">
-        <div class="d-flex w-75 justify-content-around">
-            <img src="images/products/LovePhilter_Splash.jpg" alt="">
-            <img src="images/products/slicex_splash.jpg" alt="">
-            <img src="images/products/FLkey.jpg" alt="">
-
-        </div>
-        <p class="mt-5 w-50">
-
-        </p>
-
-    </article>
-<article class="w-75 mx-auto">
-                    <h3 style="font-size:2.5em; font-weight:bold">Le monde de Fruty Loops</h3>
-    <div style="width:100%;display:flex;justify-content:space-between;">
-        <a class="icon-link-hover"href="#" style="width:49%">
-        
-            <img style="width:100% ; margin-top:25px" src="images/products/132357-large.jpg" alt="">
-
-        </a>
-        <img style="width:49% ; margin-top:25px" src="images/products/115175-large.jpg" alt="">
-    </div>
-    <div style="width:100%;display:flex;justify-content:space-between;">
-        <img style="width:29% ; margin-top:25px" src="images/products/145124-large.jpg" alt="">
-        <img style="width:69% ; margin-top:25px" src="images/products/99095-large.jpg" alt="">
-    </div>
-
-    <div style="width:100%;display:flex;justify-content:space-between;">
-        <img style="width:49%;margin-top:25px" src="images/products/99098-large.jpg" alt="">
-        <img style="width:49%;margin-top:25px" src=" images/products/99101-large.jpg" alt="">
-    </div>
- 
+		<article id="article" class="d-flex  flex-column justify-content-center align-items-center">
+		<img class="m-5 w-75"  src="images/products/FLStudio21.1.jpg" alt="">
 
 
 
 
-</article>
+		</article>
+		<article  class="mb-5 w-75 fs-4 mx-auto  ">
+			<h5 class="m-5 text-end fs-4 fs-4 colorOrange" >FL STUDIO 21.1 |</h5>
+			<div class="ecrit text-white" >
+			
+			</div>
+			<p>
+			Nous sommes ravis de la sortie de FL Studio 21.1.
+			</p>
+			<p>
+			Ajout d’une édition de notes plus rapide et plus créative ,
+			</p>
+			<p>
+			 avec des outils de capture d’échelle et de note personnalisée dans le clavier.
+			</p>
+			<p>
+			Formes d’onde colorées pour une meilleure gestion des échantillons.
+			</p>
+			<p>
+			Un plugin de chorus extrême, “Hyper Chorus”,
+			</p>
+			<p>
+			AI Declipper dans Edison et bien plus encore.
+			</p>
+			<p>
+			 Tout cela parce que nous vous aimons Lifetime Free Updates!
+			</p>
+			
+	
+		     
+		
+             
+			
+																																	             
+		</article>
+
+		<article id="article3" class="mt-5 w-100 d-flex flex-column mx-auto position-relative ">
+			<div class="mt-5 w-100 d-flex justify-content-center flex-wrap ">
+					<div class="EM6 w-100  h-50">
+						<div data-em="EM6" class="fs-1 fw-1 text-white">Quoi de Neuf</div>
+						<div data-em="EM6" class="fs-3">
+						<span>dans</span> <span class="fs-1 text-info" >FL</span> <span class="fs-1 text-warning">STUDIO</span> <span class="text-info">21.1</span>   
+						</div>
+					</div>
+					<div  class="piano-roll col-4 m-2  ps-3">
+						<h5 class="text-warning">FL Studio</h5>
+
+						<div>
+
+							<h6 class="ml3">Formes d’onde colorées -</h6>
+							<p class="ml3">Option de paramètres généraux pour colorer le contenu de fréquence de code dans les formes d’onde audio. Cela s’applique au navigateur, à la liste de lecture, au canal de l’échantillonneur, etc.</p>
+						</div>
+
+
+						<div>
+							<h6 class="ml3">Contrôle MIDI -
+							</h6>
+							<p class="ml3">Nouveau mode de synchronisation externe et stabilité de l’horloge maître MIDI améliorée. Cela permet à FL Studio de 'asservir' une horloge MIDI externe afin qu’elle joue à temps sur une source d’horloge MIDI externe..</p>
+
+						</div>
+
+
+						<div>
+							<h6 class="ml3">Mises à jour automatisées -</h6>
+							<p class="ml3">Option pour télécharger automatiquement les mises à jour de FL Studio et les appliquer au prochain redémarrage.</p>
+
+						</div>
+
+					</div>
+
+					<div class="piano-roll   col-4 m-2  ps-3 mb-1">
+						<h5 class="text-warning" class="ml3">Piano roll</h5>
+						<div>
+
+							<h6 class="ml3">Aligner sur l’échelle -</h6>
+							<p class="ml3">Option de clavier pour aligner les notes sur l’échelle sélectionnée lors du placement ou du mouvement. Voir l’icône de note dans la barre d’outils.</p>
+
+						</div>
+						<div>
+							<h6 class="ml3">Menu > Outils > Script -</h6>
+							<p class="ml3">
+								Les scripts sont basés sur Python qui permet une manipulation personnalisée des données du clavier. Il existe plusieurs scripts prédéfinis ou vous pouvez écrire les vôtres. Le script inclut également la création automatique d’interface utilisateur. Voir le forum de script de piano roll pour partager et discuter des scripts.</p>
+
+						</div>
+
+					</div>
+					<div class="piano-roll  col-4 m-2  ps-3">
+
+						<h5 class="text-warning">Piano roll</h5>
+						<div>
+							<p class="ml3">
+								Nouveaux Pluging et mis à jour</p>
+							<h6 class="ml3">Hyper Chorus -</h6>
+							<p>Extreme chorus FX plugin, inclus avec Producer Edition et plus.</p>
+
+						</div>
+						<div>
+
+							<h6 class="ml3">Edison Declipper -</h6>
+							<p class="ml3">Nouvel outil de décélération amélioré basé sur l’IA. Peut restaurer les enregistrements qui ont été coupés en raison de problèmes de niveau.</p>
+
+						</div>
+						<div>
+
+							<h6 class="ml3">SliceX -</h6>
+							<p class="ml3">Maintenant redimensionnable en faisant glisser le coin inférieur droit.</p>
+						</div>
+					</div>
+			</div>
+		</article>
+
+
+		<article id="article2" class="  p-3 mb-5 d_flex flex-column justify-content-arround align-items-center">
+			<div class="col-12 h-100 d-flex justify-content-center align-items-center flex-wrap" >
+					<div class="pourLesMusicien col-4 h-25 ">
+							<div class="fs-4 fw-4 w-100">
+											<h3 class="text-info fw-bold">FL STUDIO |</h3> 
+											<p>Conçu pour</p> 
+											<div>
+													<span class="text-primary"> le Musicien</span>
+											En VOUS <span class="fs-4 fw-bolder">!</span> 
+											</div> 
+							</div>
+							<div>
+									Avec plus de 25 ans de développement continu, FL STUDIO est devenu le 
+									« moyen le plus rapide de votre cerveau à vos enceintes » pour bon nombre des meilleurs DJ
+									et producteurs du monde. De l'utilisation de l'essai FL Studio dans leur chambre
+									à l'atterrissage sur les plus grandes scènes du monde. Est-ce votre tour ? 
+									Notre version d'essai vous permet de créer et d'enregistrer des projets, 
+									puis de les exporter vers des formats audio comme MP3 et WAV, 
+									à être partagés avec le monde. Jusqu’où FL Studio vous mènera-t-il ?
+							</div>
+					</div>
+			
+					<img class="col-7 m-4" src="images\products\flstudio-powerUser-image-cloud.png" alt="">
+			</div>
+		</article>
+
+		<article id="article " class="col-12 d-flex justify-content-center align-items-center mx-auto flex-wrap " >
+		<img class="col-7  m-4" src="images/products/155226-large.jpg" alt="">
+		<p style="font-size:1.5em" class="compositeur  col-4 text-start mx-auto ">
+			En tant que compositeur, ma tâche la plus difficile est de traduire les idées de ma tête dans un DAW.
+																																	              Fruty-loops se sent comme une extension de mon cerveau et me permet de créer facilement la musique de mon imagination.
+		</p>
+		</article>
+		<article id="article_love" class="d-flex flex-column justify-content-center align-items-center ">
+		<div class="d-flex w-100 justify-content-around align-items-center flex-wrap h-100 mx-auto   ">
+				<div class="img_love mt-4"></div>
+				<span class="img_slicex mt-4" ></span>
+				<span class="img_flkey mt-4"></span>
+			{# <img  class="img_love" src="images/products/LovePhilter_Splash.jpg" alt="">
+			<img  class="img_slicex" src="images/products/slicex_splash.jpg" alt="">
+			<img  class="img_flkey" src="images/products/FLkey.jpg" alt=""> #}
+
+		</div>
+		<p class="mt-5 w-50"></p>
+
+		</article>
+
+
+		<article  class="col-12 mosaique">
+		<div style="font-size:2.5em; font-weight:bold" class="mb-5">
+			<div class="">
+				<div ><span class="colorOrange">Le</span> <br> <span >Monde de </span></div>
+				<div class="position-relative   start-25 text-end w-50"><span class="colorOrange">Fruty Loops</span><span class="colorOrange  ms-4 ">!</span> </div>   
+			</div>
+		</div>
+
+
+		<div class="d-flex  flex-column w-100">
+				<div class="d-flex w-100 h-100 ">
+					<div class="group_mosaique  w-50  ">
+						<div class="image image1" href="#">
+							<span class="survole  ">Infected Mushroom parlent de Fruty-Loops <br> et du travail de production</span>
+							{# <img class="test2" style="width:100% ; margin-top:25px" src="images/products/132357-large.jpg" alt=""> #}
+						</div>
+					</div>
+
+					<div class="group_mosaique  w-50  ">
+						<div class="image image2 " href="#">
+							<span class="survole">Fruty Loops Spotlight avec Nils Frahm</span>
+							{# <img class="test2" style="width:100% ; margin-top:25px" src="images/products/132357-large.jpg" alt=""> #}
+						</div>
+
+					</div>
+				
+				</div>
+				<div class="d-flex w-100 h-100 ">
+					<div class="group_mosaique  w-50 ">
+						<div class="image image3" href="#">
+							<span class="survole">Je suis survolé</span>
+							{# <img class="test2" style="width:100% ; margin-top:25px" src="images/products/132357-large.jpg" alt=""> #}
+						</div>
+
+					</div>
+				
+					<div class="group_mosaique  w-75">
+						<div class="image image4" href="#">
+							<span class="survole">Je suis survolé</span>
+							{# <img class="test2" style="width:100% ; margin-top:25px" src="images/products/132357-large.jpg" alt=""> #}
+						</div>
+
+					</div>
+				
+				</div>
+				<div class="d-flex w-100 h-100 ">
+					<div class="group_mosaique  w-50">
+						<div class="image image5" href="#">
+							<span class="survole">Je suis survolé</span>
+							{# <img class="test2" style="width:100% ; margin-top:25px" src="images/products/132357-large.jpg" alt=""> #}
+						</div>
+
+					</div>
+					<div class="group_mosaique  w-50">
+						<div class="image image6" href="#">
+							<span class="survole">Je suis survolé</span>
+							{# <img class="test2" style="width:100% ; margin-top:25px" src="images/products/132357-large.jpg" alt=""> #}
+						</div>
+
+					</div>
+
+				</div>
+
+
+
+			{# <img style="width:49% ; margin-top:25px" src="images/products/115175-large.jpg" alt=""> #}
+		</div>
+
+
+		{# <div style="width:100%;display:flex;justify-content:space-between;">
+			<img style="width:29% ; margin-top:25px" src="images/products/145124-large.jpg" alt="">
+			<img style="width:69% ; margin-top:25px" src="images/products/99095-large.jpg" alt="">
+		</div>
+
+		<div style="width:100%;display:flex;justify-content:space-between;">
+			<img style="width:49%;margin-top:25px" src="images/products/99098-large.jpg" alt="">
+			<img style="width:49%;margin-top:25px" src=" images/products/99101-large.jpg" alt="">
+		</div> #}
+
+
+		</article>
 {% endblock %}
