--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -371,10 +371,10 @@ span.survol{
     background-color: white;
     /* z-index: 2000; */
 }
-.pourLesMusicien{
+/* .pourLesMusicien{
     width:300px;
     height: 100%;
-}
+} */
 .compositeur{
     width:300px;
     height: 100%;
