--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -50,14 +50,14 @@
 
 		<article id="article3" class="mt-5 w-100 d-flex flex-column mx-auto position-relative ">
 			<div class="mt-5 w-100 d-flex justify-content-center flex-wrap ">
-					<div class="EM6 w-100  h-50">
+					<div class="EM6 w-100  h-25">
 						<div data-em="EM6" class="fs-1 fw-1 text-white">Quoi de Neuf</div>
 						<div data-em="EM6" class="fs-3">
 						<span>dans</span> <span class="fs-1 text-info" >FL</span> <span class="fs-1 text-warning">STUDIO</span> <span class="text-info">21.1</span>   
 						</div>
 					</div>
 					<div  class="piano-roll col-4 m-2  ps-3">
-						<h5 class="text-warning">FL Studio</h5>
+						<h5 class="text-warning fs-1 mb-4">FL Studio</h5>
 
 						<div>
 
@@ -83,7 +83,7 @@
 					</div>
 
 					<div class="piano-roll   col-4 m-2  ps-3 mb-1">
-						<h5 class="text-warning" class="ml3">Piano roll</h5>
+						<h5 class="text-warning fs-1 mb-4">Piano roll</h5>
 						<div>
 
 							<h6 class="ml3">Aligner sur l’échelle -</h6>
@@ -100,7 +100,7 @@
 					</div>
 					<div class="piano-roll  col-4 m-2  ps-3">
 
-						<h5 class="text-warning">Piano roll</h5>
+						<h5 class="text-warning fs-1 mb-4">Piano roll</h5>
 						<div>
 							<p class="ml3">
 								Nouveaux Pluging et mis à jour</p>
@@ -131,8 +131,8 @@
 											<h3 class="text-info fw-bold">FL STUDIO |</h3> 
 											<p>Conçu pour</p> 
 											<div>
-													<span class="text-primary"> le Musicien</span>
-											En VOUS <span class="fs-4 fw-bolder">!</span> 
+													<span class="text-primary fs-1"> le Musicien </span>
+											<span class=" fw-bolder text-info">En VOUS !</span> 
 											</div> 
 							</div>
 							<div>
