pour les musiciens css

--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -13,30 +13,33 @@
 
 
 		</article>
-		<article  class="mb-5 w-75 fs-4 mx-auto  ">
-			<h5 class="m-5 text-end fs-4 fs-4 colorOrange" >FL STUDIO 21.1 |</h5>
-			<div class="ecrit text-white" >
-			
+		<article  class="mb-5 w-75 fs-4 mx-auto">
+			<div class=" h-100">
+				<h5 class="m-5 text-end fs-4 fs-1 colorOrange h-50" >FL STUDIO 21.1 |</h5>
+
 			</div>
-			<p>
+			<span class="para" >
+			
+			</span>
+			<p >
 			Nous sommes ravis de la sortie de FL Studio 21.1.
 			</p>
-			<p>
+			<p class="">
 			Ajout d’une édition de notes plus rapide et plus créative ,
 			</p>
-			<p>
+			<p class="">
 			 avec des outils de capture d’échelle et de note personnalisée dans le clavier.
 			</p>
-			<p>
+			<p class="">
 			Formes d’onde colorées pour une meilleure gestion des échantillons.
 			</p>
-			<p>
+			<p class="">
 			Un plugin de chorus extrême, “Hyper Chorus”,
 			</p>
-			<p>
+			<p class="">
 			AI Declipper dans Edison et bien plus encore.
 			</p>
-			<p>
+			<p class="">
 			 Tout cela parce que nous vous aimons Lifetime Free Updates!
 			</p>
 			
